--- a/docs/.vuepress/.temp/styles/index.scss
+++ b/docs/.vuepress/.temp/styles/index.scss
@@ -1,1 +1,1 @@
-@forward '/Users/xuhairui/work/My-Blog/docs/.vuepress/styles/index.scss';
+@forward 'D:/myproject/yangzhenqian.github.io/docs/.vuepress/styles/index.scss';
