--- a/docs/.vuepress/.temp/styles/palette.scss
+++ b/docs/.vuepress/.temp/styles/palette.scss
@@ -1,1 +1,1 @@
-@forward '/Users/xuhairui/work/My-Blog/docs/.vuepress/styles/palette.scss';
+@forward 'D:/myproject/yangzhenqian.github.io/docs/.vuepress/styles/palette.scss';
